erDiagram
    User ||--o| Point : has
    User ||--o{ User_Coupon : has
    User ||--o{ Order : makes
    User ||--o| Bucket : owns
    User ||--o{ Payment : has
    Bucket ||--o{ Bucket_Product : contains
    Coupon ||--o{ User_Coupon : has
    Product ||--o{ Bucket_Product : included_in
    Product ||--o{ Order_Product : has
    Product ||--|| Product_Stock : tracks
    Order ||--o{ Order_Product : contains
    Order ||--|o Payment : processes
    Order ||--o| User_Coupon : applies
    Order_Product }|--o| Bucket_Product : from_bucket

    User {
        int id PK
        string name
    }
    Point {
        int id PK
        int user_id FK
        int amount
    }
    User_Coupon {
        int id PK
        int user_id FK
        int coupon_id FK
        date issue_date
        boolean used
    }
    Coupon {
        int id PK
        string name
        String discount_type
        int remainingQuantity
        int discount_amount
        int discount_rate
        int discount_amount_per_unit
        int max_discount_amount
        int max_quantity
        date expiry_at
    }
    Order {
        int id PK
        int user_id FK
        int user_coupon_id FK
        date order_at
        string status
        boolean from_bucket
        int totalAmount
        int discountAmount
        int finalAmount
    }
    Order_Product {
        int id PK
        int order_id FK
        int product_id FK
        int bucket_product_id FK
        int quantity
        int unit_price
        date created_at
        date updated_at
    }
    Product {
        int id PK
        string name
        int price
        int quantity
    }
    Product_Stock {
        int id PK
        int product_id FK
        int quantity
        date updated_at
    }
    Payment {
        int id PK
        int user_id FK
        int order_id FK
        int payment_amount
        string payment_status
        date payment_at
    }
    Bucket {
        int id PK
        int user_id FK
        date created_at
        date updated_at
    }
    Bucket_Product {
        int id PK
        int bucket_id FK
        int product_id FK
        int quantity
        int unit_price
    }